Fixed the logic behind the stages

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -70,13 +70,10 @@ $categories: #959595;
   .state-container {
     display: flex;
     flex-direction: row;
+    background: $disable;
 
     .active {
       background: $active;
-    }
-
-    .disabled {
-      background: $disable;
     }
 
     .state {
@@ -84,6 +81,20 @@ $categories: #959595;
       height: 3px;
     }
 
+    .state-one {
+      width: 33.3%;
+      height: 3px;
+    }
+
+    .state-two {
+      width: 66.6%;
+      height: 3px;
+    }
+
+    .state-three {
+      width: 100%;
+      height: 3px;
+    }
 
   }
 
